fixed responsive design, results wrapping synchronised with filters wrapping

--- a/styles/search-view.css
+++ b/styles/search-view.css
@@ -48,8 +48,8 @@
 
 .main {
     min-height: calc(100vh - 400px);
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 47px;
+    margin-right: 47px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
